# soxtract

./: .gitignore  README.md  config.example.toml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
agent/: package-lock.json  package.json  tsconfig.json
agent/src/: config.ts  h001_construct.ts  h001_constructors.ts  h001_detail.ts  h001_explore.ts  h001_final.ts  h001_hybrid.ts  h001_spawn_hook.ts  h002_provider.ts  index.ts  modules.ts  reader.ts  scanner.ts  types.ts
soxtract/: agent.js  cli.py  config.py  dedup.py  elf_fixer.py  elf_validator.py  extractor.py  metadata.py  session.py
tests/: test_elf_fixer.py  test_elf_validator.py
