[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "soxtract"
version = "0.1.0"
description = "Dynamically extract native .so libraries from Android apps via Frida"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["android", "frida", "reverse-engineering", "elf", "native"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "frida>=16.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.urls]
Homepage = "https://github.com/ScreaMy7/soxtract"
"Bug Tracker" = "https://github.com/ScreaMy7/soxtract/issues"

[project.scripts]
soxtract = "soxtract.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["soxtract"]

[tool.hatch.build.targets.wheel.shared-data]

[tool.hatch.build.targets.sdist]
include = [
    "soxtract/",
    "agent/src/",
    "agent/package.json",
    "agent/tsconfig.json",
    "tests/",
    "config.example.toml",
    "README.md",
]
